[package]
name = "aws-keychain"
version = "0.2.1"
edition = "2021"
repository = "https://github.com/acn-gen-tomita/binary-zone"

[dependencies]
enigo = "0.2.1"
webbrowser = { version = "1.0.1" }
bardecoder = "0.5.0"
image = "0.24"
base64 = "0.22.1"
base32 = "0.5.1"
url = "2.5.2"
protobuf = "*"
dirs = "*"
serde = { version = "1.0.204", features = ["derive"] }
dialoguer = "0.11.0"
serde_json = "1.0.120"
totp-rs = { version = "^5.0", features = ["otpauth"] }
bpaf = { version = "0.9.12", features = ["derive", "autocomplete"] }
machineid-rs = "1.2.4"
urlencoding = "2.1.3"

[build-dependencies]
protobuf-codegen = "3.5.0"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.19.1"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell", "powershell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = [
    "aarch64-apple-darwin",
    "x86_64-apple-darwin",
    "x86_64-unknown-linux-gnu",
    "x86_64-pc-windows-msvc",
]
# Publish jobs to run in CI
pr-run-mode = "plan"
# Path that installers should place binaries in
install-path = "CARGO_HOME"
# Whether to install an updater program
install-updater = true

[workspace.metadata.dist.dependencies.apt]
libxdo-dev = '*'
